pilot/docker/echo.yaml
# Kubernetes set-up
apiVersion: v1
kind: Service
metadata:
  name: a
  labels:
    app: a
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: a
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: a
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: a
      annotations:
        pod.beta.kubernetes.io/init-containers: >
          [{
            "name": "iptables",
            "image": "gcr.io/istio-test/init:test",
            "imagePullPolicy": "Always",
            "securityContext": {
              "privileged": true
            },
            "command": ["/bin/sh", "-c",
              "sudo iptables -t nat -A PREROUTING -p tcp -j REDIRECT --to-port 5001; sudo iptables -t nat -A OUTPUT -p tcp -j REDIRECT --to-port 5001 -m owner '!' --uid-owner 1337; sudo iptables -t nat --list"
            ]
          }]
    spec:
      containers:
      - name: echo
        image: gcr.io/google_containers/echoserver:1.4
        ports:
        - containerPort: 8080
      - name: proxy
        image: gcr.io/istio-test/runtime:experiment
        securityContext:
          runAsUser: 1337
        args:
          - proxy
          - -s
          - manager:8080
          - --logtostderr
          - -v
          - "2"
          - -p
          - "5001"
          - -n
          - default
          - -b
          - "/envoy_esp"
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: test
  labels:
    app: test
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: test
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: echo
        image: gcr.io/google_containers/echoserver:1.4
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: manager
  labels:
    app: manager
spec:
  ports:
  - port: 8080
    name: http-discovery
  selector:
    app: manager
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: manager
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: manager
    spec:
      containers:
      - name: manager
        image: gcr.io/istio-test/runtime:experiment
        args: ["server", "--logtostderr", "-v", "2"]
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
