pilot/docker/envoy_istio_telemetry_auth.json
{
  "listeners": [
   {
     "address": "tcp://0.0.0.0:15004",
     "name": "tcp_0.0.0.0_15004",
     "filters": [
       {
         "type": "read",
         "name": "http_connection_manager",
         "config": {
           "codec_type": "http2",
           "stat_prefix": "grpc",
           "generate_request_id": true,
           "tracing": {
             "operation_name": "egress"
           },
           "route_config": {
             "virtual_hosts":[
               {
                 "name": "in|9091",
                 "domains": [
                   "*"
                 ],
                 "routes": [
                   {
                     "prefix": "/istio.mixer.v1.Mixer/Report",
                     "cluster": "in.9091",
                     "timeout_ms": 0,
                     "opaque_config": {
                       "destination.service": "istio-telemetry.${POD_NAMESPACE}.svc.cluster.local",
                       "mixer_check": "off",
                       "mixer_forward": "off",
                       "mixer_report": "on"
                     },
                     "decorator": {
                       "operation": "Report"
                     }
                   }
                 ]
               }
             ]
           },
           "filters": [
             {
               "type": "decoder",
               "name": "mixer",
               "config": {
                 "v2": {
                   "defaultDestinationService": "istio-telemetry.${POD_NAMESPACE}.svc.cluster.local",
                   "mixerAttributes": {
                     "attributes": {
                       "destination.uid": {
                         "stringValue" : "kubernetes://${POD_NAME}.${POD_NAMESPACE}"
                       }
                     }
                   },
                   "serviceConfigs": {
                     "istio-telemetry.${POD_NAMESPACE}.svc.cluster.local": {
                       "disableCheckCalls": true,
                       "disableReportCalls": false,
                       "mixerAttributes": {
                         "attributes": {
                           "destination.service": {
                             "stringValue": "istio-telemetry.${POD_NAMESPACE}.svc.cluster.local"
                           },
                           "destination.uid": {
                             "stringValue" : "kubernetes://${POD_NAME}.${POD_NAMESPACE}"
                           }
                         }
                       }
                     }
                   },
                   "transport": {
                     "reportCluster": "in.9091"
                   }
                 }
               }
             },
             {
               "type": "",
               "name": "cors",
               "config": {}
             },
             {
               "type": "decoder",
               "name": "router",
               "config": {}
             }
           ],
           "access_log": [
             {
               "path": "/etc/istio/proxy/envoy_access_log.txt"
             }
           ]
         }
       }
     ],
     "ssl_context": {
       "cert_chain_file": "/etc/certs/cert-chain.pem",
       "private_key_file": "/etc/certs/key.pem",
       "ca_cert_file": "/etc/certs/root-cert.pem",
       "require_client_certificate": true
     },
     "bind_to_port": true
   }
  ],
  "admin": {
    "access_log_path": "/dev/stdout",
    "address": "tcp://127.0.0.1:15000"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "in.9091",
        "connect_timeout_ms": 1000,
        "type": "static",
        "features": "http2",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://127.0.0.1:9091"
          }
        ],
        "circuit_breakers": {
          "default": {
            "max_connections": 100000,
            "max_pending_requests": 100000,
            "max_requests": 100000
          }
        }
      },
      {
        "name": "zipkin",
        "connect_timeout_ms": 1000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://zipkin.${POD_NAMESPACE}:9411"
          }
        ]
      }
    ]
  },
  "tracing": {
    "http": {
      "driver": {
        "type": "zipkin",
        "config": {
          "collector_cluster": "zipkin",
          "collector_endpoint": "/api/v1/spans"
        }
      }
    }
  }
}
